	all dead connections in a single call to DatabaseManager.getConnection()
	since the least recently used connections are the ones that time out first
	and are also the first to be connection checked. The only downside is that
	the pool has to throw out all the connections in the cache before we realize
	that the database server is offline.

2012-06-20  GoldenKevin  (revision 90)

	* Fixed deadlock in RemoteCenterSession. Reverted changes to that file from
	r87.
	* DatabaseManager.ThreadLocalConnections.getConnection() now always throws
	an SQLException if the database server cannot be reached rather than return
	null in some cases. Refactored out connectionCheck since it's body is a
	single line.

2012-06-20  GoldenKevin  (revision 91)

	* Added all server side NPC scripts for NPCs on Maple Island. The eclectic
	text is meant to be faithful to GMS v0.62 yet free of blatant misspellings
	and broken English.
	* Most commonly called methods outside of NpcConversationActions now have
	aliases in that class or its super class. The idea is to minimize the scope
	of scripts so that refactoring the sources will have less pitfalls.

2012-06-22  GoldenKevin  (revision 92)
	* All Lith Harbor NPCs (except Chef, since I can't find any reliable script
	for him, and Duey and EXP Gachapon because they're too complicated at the
	moment) are now scripted.
	* argon.sql updated.

2012-06-23  GoldenKevin  (revision 93)
	* Fixed improper usage of Rhino Context instances.
	* Packaged libraries have been updated. Rhino has been updated from version
	1.7R3 to 1.7R4 and MySQL Connector/J from 5.1.16 to 5.1.20. MySQL's .jar and
	Rhino's .jar files have been recompressed to reduce their size by a few
	kilobytes, so they do not match the size of the download you would get on
	their respective websites.

Copyright 2011-2012 GoldenKevin
Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.