@@ -26,7 +26,7 @@
  */
 
 npc.sayNext("Hi there! This cab is for VIP customers only. Instead of just taking you to different towns like the regular cabs, we offer a much better service worthy of VIP class. It's a bit pricey, but... for only 10,000 mesos, we'll take you safely to the #bant tunnel#k.");
-var prompt, price;
+let prompt, price;
 if (npc.playerIsBeginner()) {
 	prompt = "We have a special 90% discount for beginners. The ant tunnel is located deep inside in the dungeon that's placed at the center of the Victoria Island, where #p1061001# is. Would you like to go there for #b1,000 mesos#k?";
 	price = 1000;
@@ -34,7 +34,7 @@ if (npc.playerIsBeginner()) {
 	prompt = "The regular fee applies for all non-beginners. The ant tunnel is located deep inside in the dungeon that's placed at the center of the Victoria Island, where #p1061001# is. Would you like to go there for #b10,000 mesos#k?.";
 	price = 10000;
 }
-var selection = npc.askYesNo(prompt);
+let selection = npc.askYesNo(prompt);
 if (selection == 1) {
 	if (npc.playerHasMesos(price)) {
 		npc.takeMesos(price);
